Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,3 @@ body {
 .mantine-Switch-root {
   -webkit-tap-highlight-color: transparent;
 }
-
-#root {
-  height: 100vh;
-}
